# torchonnx

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  __init__.py  coverage.json  pyproject.toml
.github/workflows/: unit-tests.yml
nets/: TinyImageNet_resnet_medium.py  TinyImageNet_resnet_medium_v22_simplified.py  ibp_3_3_8_v22_simplified.onnx  ibp_3_3_8_v22_simplified.pth  ibp_3_3_8_v22_simplified.py
src/torchonnx/: __init__.py  _torchonnx.py  presets.py
src/torchonnx/analyze/: __init__.py  attr_extractor.py  builder.py  tensor_classifier.py  types.py
src/torchonnx/generate/: _context.py  _forward_gen.py  _init_gen.py  _state_dict_gen.py  _templates.py  _utils.py  code_generator.py
src/torchonnx/normalize/: __init__.py  normalize.py  utils.py
src/torchonnx/optimize/: __init__.py  optimizer.py
src/torchonnx/simplify/: __init__.py  _decorations.py  _formatter.py  _line_optimizer.py  _optimizer.py  _rules.py
test/: benchmark_utils.py  build_benchmarks.py  check_torch_model.py  example_resnet.py  example_vit.py  test.py  test_benchmarks.py  test_vmap_mode.py  utils.py
test_vnncomp/: test_acasxu.py  test_cctsdb.py  test_cgan.py  test_collins_rul_cnn.py  test_lsnc.py  test_nn4sys.py  test_tinyimagenet.py
tests/: __init__.py  analyze_model_nodes.py  benchmark_utils.py  build_benchmarks.py  build_test_data.py  conftest.py  test_benchmarks.py  test_torchonnx.py  test_torchonnx_regression.py  test_vmap_mode.py  test_vnncomp2024_benchmarks.py  update_baselines.py  utils.py  vnncomp2024_benchmarks
tests/baselines/acasxu_2023/: ACASXU_run2a_1_2_batch_2000.py  ACASXU_run2a_1_3_batch_2000.py  ACASXU_run2a_1_4_batch_2000.py  ACASXU_run2a_1_5_batch_2000.py  ACASXU_run2a_1_6_batch_2000.py  ACASXU_run2a_1_7_batch_2000.py  ACASXU_run2a_1_8_batch_2000.py  ACASXU_run2a_1_9_batch_2000.py  ACASXU_run2a_2_1_batch_2000.py  ACASXU_run2a_2_2_batch_2000.py  ACASXU_run2a_2_3_batch_2000.py  ACASXU_run2a_2_4_batch_2000.py  ACASXU_run2a_2_5_batch_2000.py  ACASXU_run2a_2_6_batch_2000.py  ACASXU_run2a_2_7_batch_2000.py  ACASXU_run2a_2_8_batch_2000.py  ACASXU_run2a_2_9_batch_2000.py  ACASXU_run2a_3_1_batch_2000.py  ACASXU_run2a_3_2_batch_2000.py  ACASXU_run2a_3_3_batch_2000.py
tests/baselines/cctsdb_yolo_2023/: patch-1.py  patch-3.py
tests/baselines/cgan_2023/: cGAN_imgSz32_nCh_1.py  cGAN_imgSz32_nCh_1_transposedConvPadding_1.py  cGAN_imgSz32_nCh_3.py  cGAN_imgSz32_nCh_3_nonlinear_activations.py  cGAN_imgSz32_nCh_3_small_transformer.py  cGAN_imgSz32_nCh_3_upsample.py  cGAN_imgSz64_nCh_1.py  cGAN_imgSz64_nCh_3.py
tests/baselines/cifar100/: CIFAR100_resnet_large.py  CIFAR100_resnet_medium.py
tests/baselines/collins_aerospace_benchmark/: yolov5nano_LRelu_640.py
tests/baselines/collins_rul_cnn_2023/: NN_rul_full_window_20.py  NN_rul_full_window_40.py  NN_rul_small_window_20.py
tests/baselines/cora/: cifar10-point.py  cifar10-set.py  cifar10-trades.py  mnist-point.py  mnist-set.py  mnist-trades.py  svhn-point.py  svhn-set.py  svhn-trades.py
tests/baselines/dist_shift_2023/: mnist_concat.py
tests/baselines/linearizenn/: AllInOne_10_10.py  AllInOne_120_120.py  AllInOne_120_30.py  AllInOne_120_50.py  AllInOne_30_30.py  AllInOne_30_80.py  AllInOne_50_120.py  AllInOne_50_50.py  AllInOne_80_30.py  AllInOne_80_80.py
tests/baselines/lsnc/: quadrotor2d_output.py  quadrotor2d_state.py
tests/baselines/metaroom_2023/: 4cnn_ry_37_6_no_custom_OP.py  4cnn_ry_38_6_no_custom_OP.py  4cnn_ry_47_7_no_custom_OP.py  4cnn_ry_91_15_no_custom_OP.py  4cnn_tz_19_3_no_custom_OP.py  4cnn_tz_1_0_no_custom_OP.py  4cnn_tz_31_5_no_custom_OP.py  4cnn_tz_34_5_no_custom_OP.py  4cnn_tz_36_6_no_custom_OP.py  4cnn_tz_55_9_no_custom_OP.py  4cnn_tz_61_10_no_custom_OP.py  6cnn_ry_118_19_no_custom_OP.py  6cnn_ry_37_6_no_custom_OP.py  6cnn_ry_5_0_no_custom_OP.py  6cnn_ry_71_11_no_custom_OP.py  6cnn_tz_104_17_no_custom_OP.py  6cnn_tz_11_1_no_custom_OP.py  6cnn_tz_52_8_no_custom_OP.py  6cnn_tz_81_13_no_custom_OP.py  6cnn_tz_9_1_no_custom_OP.py
tests/baselines/ml4acopf_2023/: 118_ieee_ml4acopf.py  14_ieee_ml4acopf.py  300_ieee_ml4acopf.py
tests/baselines/ml4acopf_2024/: 118_ieee_ml4acopf-linear-nonresidual.py  118_ieee_ml4acopf-linear-residual.py  118_ieee_ml4acopf.py  14_ieee_ml4acopf-linear-nonresidual.py  14_ieee_ml4acopf-linear-residual.py  14_ieee_ml4acopf.py  300_ieee_ml4acopf-linear-nonresidual.py  300_ieee_ml4acopf-linear-residual.py  300_ieee_ml4acopf.py
tests/baselines/nn4sys_2023/: lindex.py  lindex_deep.py  mscn_128d.py  mscn_128d_dual.py  mscn_2048d.py  (+6 more)
tests/test_benchmarks/: analyze_model_nodes.py  benchmark_utils.py  build_benchmarks.py  build_test_data.py  conftest.py  test_performance.py  test_torchonnx.py  test_torchonnx_regression.py  test_vmap_mode.py  test_vnncomp2024_benchmarks.py  test_vnncomp2025_benchmarks.py  update_baselines.py  utils.py
tests/test_units/: __init__.py
torchonnx/: __init__.py  _forward_part.py  _header_part.py  _init_part.py  _onnx_attrs.py  _torch_args.py  _torchonnx.py  _utils.py  forward_part.py  header_part.py  init_part.py  onnx_attrs.py  torch_args.py  torchonnx.py  utils.py
torchonnx/analyze/: __init__.py  attr_extractor.py  builder.py  tensor_classifier.py  types.py
torchonnx/code_generation/: __init__.py  forward_gen.py  init_gen.py  module_gen.py
torchonnx/forward_part/: __init__.py  _forward.py
torchonnx/generate/: __init__.py  _forward_gen.py  _init_gen.py  _state_dict_gen.py  _templates.py  _utils.py  code_generator.py
torchonnx/init_part/: __init__.py  _init.py
torchonnx/ir/: __init__.py  _ir.py
torchonnx/naming/: __init__.py  _layer.py  _module.py  _parameter.py
torchonnx/normalize/: __init__.py  normalize.py  utils.py
torchonnx/onnx_parser/: __init__.py  _attributes.py
torchonnx/optimize/: __init__.py  optimizer.py
torchonnx/preprocess/: __init__.py  cleanup.py  version_converter.py
torchonnx/simplify/: __init__.py  _formatter.py  _line_optimizer.py  _optimizer.py  _rules.py
torchonnx/type_inference/: __init__.py  arguments.py  functional.py  operators.py  parameters.py
(+224 files in other folders)
