[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchonnx"
version = "0.1.0"
description = "PyTorch to ONNX model conversion and utilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhongkui Ma", email = "zhongkui@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "onnx==1.17.0",
    "onnxruntime==1.20.0",
    "numpy==2.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.setuptools]
packages = ["torchonnx"]

[tool.setuptools.package-data]
torchonnx = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.ruff.lint]
# Comprehensive rule set (matches main rover project)
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "RET", "SIM", "TID",
    "A", "BLE", "C90", "FBT", "ICN", "ISC", "PGH", "Q", "RSE", "SLF",
    "TD", "D", "PERF", "FURB", "PT", "T10", "PTH", "INP", "NPY",
]

ignore = [
    "E501", "B008", "RET504", "SIM108", "FBT001", "FBT002",
    "D100", "D104", "TD002", "TD003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["INP001", "D103"]
"**/test/**" = ["INP001", "D103"]
"**/tests/**" = ["INP001", "D103"]
"tests/baselines/*" = ["E501", "C901"]  # Generated baseline files

[tool.ruff.lint.isort]
known-first-party = ["torchonnx"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyright]
include = ["torchonnx"]
exclude = ["tests", "venv", ".venv", "build", "dist"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[project.urls]
Homepage = "https://github.com/ZhongkuiMa/torchonnx"
Repository = "https://github.com/ZhongkuiMa/torchonnx.git"
Documentation = "https://github.com/ZhongkuiMa/torchonnx#readme"
